fixed title being off center (it's janky but it works)

--- a/src/stylesheets/NavBar.css
+++ b/src/stylesheets/NavBar.css
@@ -1,6 +1,7 @@
 #title {
     text-align: center;
     font-weight: bold;
+    padding-left: 10%;
 }
 
 #searchbar {
